[package]
name = "raytracing"
version = "0.1.0"
authors = ["Donough Liu <ldm2993593805@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
rand = { version = "0.7.3", features = ["small_rng"] }
